--- a/index.html
+++ b/index.html
@@ -2,16 +2,20 @@
 <html lang="en-ca">
   <head>
     <meta charset="utf-8">
-    <meta name="description" content="Hello, World Webpage">
-    <meta name="keywords" content="textbox, flowchat, storyboard">
+    <meta name="description" content="Square Area Webpage">
+    <meta name="keywords" content="square">
     <meta name="author" content="Cameron Carter">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello, World!</title>
+    <title>Square Area</title>
+    <link rel="stylesheet" href="mystyle.css">
+    <script src="./myscript.js"></script>
   </head>
-  <script src="./myscript.js"></script>
-  <body>
+  <body class="body">
     <h1>Square Area</h1>
-    <input id="numberinput" type="number">
-    <button id="mybutton">Enter</button>
+    <p>Type in a number for the length of a square, and the square's area will be calculated.</p>
+    <form>
+      <input id="numberinput" type="number">
+    </form>
+    <button id="mybutton">Double click to enter</button>
   </body>
 </html>
